--- a/char_classifier_CNN.ipynb
+++ b/char_classifier_CNN.ipynb
@@ -23,16 +23,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/breta/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -133,11 +124,20 @@
      "text": [
       "Loading chars...\n",
       "Loading words...\n",
-      " |████████████████████████████████████████| 100.0% \n",
-      "-> Number of words: 5069\n",
-      "Loaded chars from words: 22883\n",
-      " |████████████████████████████████████████| 100.0% \n",
-      "-> Number of chars: 22883\n"
+      "-> Number of words: 0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m images, labels \u001b[38;5;241m=\u001b[39m \u001b[43mload_chars_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcharloc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mwordloc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/processed/breta/words_gaplines/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlang\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mLANG\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreshape(labels, (\u001b[38;5;28mlen\u001b[39m(labels), \u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m      6\u001b[0m labels \u001b[38;5;241m=\u001b[39m sofmax_labels(labels, CLAS)\n",
+      "File \u001b[1;32mc:\\Users\\musta\\OneDrive\\Masaüstü\\Yazilim Projeleri\\handwriting-ocr\\src\\ocr\\datahelpers.py:176\u001b[0m, in \u001b[0;36mload_chars_data\u001b[1;34m(charloc, wordloc, lang)\u001b[0m\n\u001b[0;32m    174\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m lang \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcz\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    175\u001b[0m      words \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([unidecode\u001b[38;5;241m.\u001b[39munidecode(w) \u001b[38;5;28;01mfor\u001b[39;00m w \u001b[38;5;129;01min\u001b[39;00m words])\n\u001b[1;32m--> 176\u001b[0m imgs, chars \u001b[38;5;241m=\u001b[39m \u001b[43m_words2chars\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimgs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwords\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgaplines\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    178\u001b[0m labels\u001b[38;5;241m.\u001b[39mextend(chars)\n\u001b[0;32m    179\u001b[0m images2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(imgs), \u001b[38;5;241m4096\u001b[39m)) \n",
+      "File \u001b[1;32mc:\\Users\\musta\\OneDrive\\Masaüstü\\Yazilim Projeleri\\handwriting-ocr\\src\\ocr\\datahelpers.py:127\u001b[0m, in \u001b[0;36m_words2chars\u001b[1;34m(images, labels, gaplines)\u001b[0m\n\u001b[0;32m    124\u001b[0m imgs \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mempty(length, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mobject\u001b[39m)\n\u001b[0;32m    125\u001b[0m new_labels \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m--> 127\u001b[0m height \u001b[38;5;241m=\u001b[39m \u001b[43mimages\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    129\u001b[0m idx \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m;\n\u001b[0;32m    130\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, gaps \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(gaplines):\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
      ]
     }
    ],
@@ -160,8 +160,8 @@
     "trainData = images[0:div]\n",
     "evalData = images[div:]\n",
     "\n",
-    "trainLabels = llabels[0:div]\n",
-    "evalLabels = llabels[div:]\n",
+    "trainLabels = labels[0:div]\n",
+    "evalLabels = labels[div:]\n",
     "\n",
     "print(\"Training images: %g\" % div)"
    ]
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.0"
   },
   "name": "CharClassifier.ipynb"
  },
